# AMOS

./: .env.example  .gitignore  AMOS_memory_operating_layer.tex  ARTIFACT_EVALUATION.md  CITATION.cff  Cargo.toml  EVIDENCE_INTAKE.md  INDEPENDENT_EVALUATION_PROTOCOL.md  README.md  pyproject.toml
amos/: __init__.py  config.py
amos/agent/: __init__.py  controller.py  live_agent.py  llm_client.py  planner.py  prompts.py  report_generator.py  task_parser.py
amos/api/: __init__.py  identity.py  main.py  routes_artifacts.py  routes_claims.py  routes_memory.py  routes_replay.py  routes_tasks.py  routes_verify.py  schemas.py
benches/: control_paths.rs
docs/: AMOS_FAQ.md  LOOP_ENGINEERING_PROMPT.md  PRODUCT_READINESS.md  RUST_REQUIREMENTS_MATRIX.md
evaluation_protocols/: pvldb_v20_preregistration.json  pvldb_v20_preregistration.sha256
external_studies/: HANDOFF.md
papers/: design_proposal.tex  implementation_reference.tex  research_paper.tex
src/: api.rs  auth.rs  connectors.rs  context.rs  domain.rs  error.rs  evidence.rs  lib.rs  main.rs  memory.rs  observability.rs  policy.rs  publication.rs  runtime.rs  scheduler.rs  seed.rs  store.rs  verification.rs  workers.rs
tests/: conftest.py  rust_api.rs  rust_mvp.rs  test_api_contract.py  test_archive_live_pilot.py  test_archive_retrieval_comparison.py  test_claim_annotation_evidence.py  test_end_to_end_payment_failure.py  test_evaluation_report.py  test_evidence_schemas.py  test_extended_experiments.py  test_external_product_evidence.py  test_feedback_retention.py  test_finalize_submission.py  test_independent_task_evidence.py  test_live_agent.py  test_memory_retrieval.py  test_metric_verification.py  test_oss_and_claim_scale.py  test_paired_task_analysis.py  test_paper_bundle.py  test_paper_report.py  test_permission_filtering.py  test_product_eval.py  test_provenance.py  test_replay.py  test_retrieval_engine_comparison.py  test_retry_live_pilot.py  test_run_live_pilot.py  test_scenario_loader.py  test_scenario_packs.py  test_schema_verification.py  test_sql_checks.py  test_systems_scale.py  test_verifier_benchmark.py
(+99 files in other folders)
