[package]
name = "amos"
version = "0.2.0"
edition = "2024"
description = "Rust-native memory operating layer for governed analytical agents"
license = "MIT"

[lib]
name = "amos"
path = "src/lib.rs"

[[bin]]
name = "amos"
path = "src/main.rs"

[[bench]]
name = "control_paths"
harness = false

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", features = ["form", "json", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlparser = { version = "0.62.0", features = ["visitor"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
