[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amos-prototype"
version = "0.1.0"
description = "AMOS: a provenance-aware memory operating layer prototype for analytics agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=0.7.1",
  "fastapi>=0.115.0",
  "matplotlib>=3.7.0",
  "pydantic>=2.12.0",
  "pydantic-core==2.46.4",
  "sqlglot>=26.0.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
semantic-eval = [
  "hnswlib==0.8.0",
  "numpy>=1.23.0,<2.0.0",
  "torch>=2.6.0",
  "transformers==4.57.6",
]

[tool.setuptools.packages.find]
include = ["amos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
